infra/k8s-dev/ingress/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    #Local configuration - Remember to install nginx
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: 'GET, HEAD, PUT, PATCH, POST, DELETE, OPTIONS'
    nginx.ingress.kubernetes.io/cors-allow-origin: 'http://localhost:3000'
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  rules:
    - host: testrestapi.eu.ngrok.io
      http:
        paths:
          # Client implementation of React or a frontend client in general that doesn't have api versioning
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: clientservicename-srv
                port:
                  number: 3000

          - path: /api/v1/service-1-name/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: servicename-srv
                port:
                  number: 3000

          - path: /api/v1/service-2-name/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: servicename2-srv
                port:
                  number: 3000
